[package]
name = "histlog"
version = "1.0.0"
authors = ["Jonathan Strong <jonathan.strong@gmail.com>"]
edition = "2018"
description = "For use with the hdrhistogram crate, provides off-thread serialization of HdrHistogram interval logs to file."
homepage = "https://github.com/jonathanstrong/histlog"
repository = "https://github.com/jonathanstrong/histlog"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
keywords = ["statistics", "analytics", "sampling", "hdrhistogram", "histogram"]
categories = ["development-tools::profiling", "asynchronous", "filesystem", "encoding"]

[dependencies]
hdrhistogram = "7.5.4"
crossbeam-channel = "0.5"
chrono = "0.4"
