[package]
name = "histlog"
version = "2.0.0-rc.2"
authors = ["Jonathan Strong <jonathan.strong@gmail.com>"]
edition = "2018"
description = "For use with the hdrhistogram crate, provides off-thread serialization of HdrHistogram interval logs to file."
homepage = "https://github.com/jonathanstrong/histlog"
repository = "https://github.com/jonathanstrong/histlog"
license = "MIT"
readme = "README.md"
keywords = ["statistics", "analytics", "sampling", "hdrhistogram", "histogram"]
categories = ["development-tools::profiling", "asynchronous", "filesystem", "encoding"]

[dependencies]
hdrhistogram = "7.5.4"
crossbeam-channel = "0.5"
chrono = "0.4"
minstant = { version = "0.1.4", optional = true }
smol_str = { version = "0.2.0", optional = true }

[features]
default = ["minstant"]
